Clean original TODO and add one requirement.

--- a/TODO
+++ b/TODO
@@ -1,11 +1,1 @@
-* Reuse libnl for NETLINK if (LGPL & dynlink) is OK for control plane.
-** ARP monitoring
-Fixup code to get initial snapshot when connecting.
-** Route monitoring
-Fixup code to get initial snapshot when connecting.
-
-* ARP cache, SPMC table, fast lookup
-
-* SPMC IPv4 routing cache, fast lookup.
-* SPMC IPv6 routing cache, fast lookup.
-
+documentation of API - more function descriptions in the header files
