Modify webserver to use both ofp select and epoll
By default the webserver example application uses ofp_select but by
defining a compile time parameter the application can use the ofp epoll
implementation instead.

Signed-off-by: Antero Nousiainen <antero.nousiainen@nokia.com>
Reviewed-and-tested-by: Brian Brooks <brian.brooks@linaro.org>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/example/README
+++ b/example/README
@@ -38,6 +38,13 @@ export www_dir=/path/to/your/www
 # To stop the web server:
 ./scripts/start_webserver.sh <ethX>
 
+By default the webserver uses ofp_select to monitor the file descriptors. By
+defining CPPFLAGS='-DUSE_EPOLL' when running configure the webserver can be set to
+use the ofp epoll implementation, e.g.:
+
+./configure <typical-ofp-flags> CPPFLAGS='-DUSE_EPOLL'
+make clean
+make
 
 webserver2
 -------------------------------------------------------------------------------
