docs: Specify that OFP should adapt to ODP LTS releases.
ODP Long Term Support (LTS) releases are the ones that are actually
supported by ODP and vendors alike, so those are the ODP releases OFP
should adapt to.

Signed-off-by: Jere Leppänen <jere.leppanen@nokia.com>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/docs/release-policy.adoc
+++ b/docs/release-policy.adoc
@@ -171,8 +171,9 @@ An OFP release consists of the following source code and documentation:
 
 * General Availability stage lasts for at least five months.
 
-* OFP aims to adapt to new ODP releases within one month of the ODP
-  release. This usually necessitates a new OFP release.
+* OFP aims to adapt to new ODP Long Term Support (LTS) releases within
+  one month of the ODP release. This usually necessitates a new OFP
+  release.
 
 * Stage transitions are communicated on the announcements page and
   mailing list at least one week beforehand, End of Life at least one
