Update ODP repository links
Update ODP repository links to point to github.

Signed-off-by: Jere Leppänen <jere.leppanen@nokia.com>
Reviewed-by: Matias Elo <matias.elo@nokia.com>

--- a/docs/ofp-user-guide.adoc
+++ b/docs/ofp-user-guide.adoc
@@ -62,7 +62,7 @@ Ensure first that needed SW and testing tools are installed in your environment:
 
 Download and install ODP:
 
- git clone https://git.linaro.org/lng/odp.git
+ git clone https://github.com/OpenDataPlane/odp
  cd odp
  git checkout v1.11.0.0_monarch
  ./bootstrap
